--- a/package.json
+++ b/package.json
@@ -17,15 +17,19 @@
     "envalid": "^8.1.0",
     "express": "^4.19.2",
     "express-validator": "^7.2.1",
-    "helmet": "^8.1.0"
+    "farmhash": "^4.0.2",
+    "helmet": "^8.1.0",
+    "ioredis": "^5.6.1",
+    "knex": "^3.1.0",
+    "pg": "^8.16.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.2",
+    "jest": "^30.0.5",
     "nodemon": "^3.1.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5",
-    "jest": "^30.0.5"
+    "typescript": "^5.4.5"
   }
 }
