--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
     "build": "tsc",
+    "test": "jest",
     "db:migrate": "ts-node scripts/knex_migrate.ts"
   },
   "author": "José Carlos Quichiz Santome",
@@ -27,10 +28,14 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20.14.2",
+    "@types/supertest": "^6.0.3",
     "jest": "^30.0.5",
     "nodemon": "^3.1.3",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.9.2"
   }
 }
