--- a/.env.template
+++ b/.env.template
@@ -6,10 +6,11 @@ DB_HOST=
 DB_PORT=
 DB_USER=
 DB_PASSWORD=
-DB_DB=
+DB_NAME=
 
 REDIS_HOST=
 REDIS_PORT=
 REDIS_DB=
 
+# Chached results ttl
 CACHED_RESULT_DEFAULT_TTL=
