--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "pg": "^8.16.3"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.1.3",
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
     "@types/jest": "^30.0.0",
